tests/invalid/UnionType_Invalid_11.whiley
public export method test():
    {int f}|{bool f} x = {f: 1}
    x.f = false
    {int f}|{bool f} y = ({int f}|{bool f}) {f: 1}
    y.f = false
